feat: implement transactional outbox pattern, enhance observability, and standardize project infrastructure